se agregan <tbody id=paginable> en todas las tablas correspondientes, solo funciona con 1 tabla por pagina

--- a/sigi/app/Resources/views/application/index.html.twig
+++ b/sigi/app/Resources/views/application/index.html.twig
@@ -20,7 +20,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="paginable">
         {% for application in applications %}
             <tr>
                 <td><a href="{{ path('application_show', { 'id': application.id }) }}">{{ application.id }}</a></td>
