--- a/sigi/app/Resources/views/emaillist/index.html.twig
+++ b/sigi/app/Resources/views/emaillist/index.html.twig
@@ -12,7 +12,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="paginable">
         {% for emailList in emailLists %}
             <tr>
                 <td>{{ emailList.name }}</td>
