--- a/sigi/app/Resources/views/misc/mentorPending.html.twig
+++ b/sigi/app/Resources/views/misc/mentorPending.html.twig
@@ -32,7 +32,7 @@
 		                <th></th>
 		            </tr>
 		        </thead>
-		        <tbody>
+		        <tbody id="paginable">
 		        {% for application in applications %}
 		            <tr>
 		                <td><a href="{{ path('application_show', { 'id': application.id }) }}">{{ application.id }}</a></td>
@@ -63,7 +63,7 @@
         	<div role="tabpanel" class="tab-pane" id="Oportunidades">
         		Oportunidades por publicar:
         		<table class="table table-striped">
-			        <tbody>
+			        <tbody id="paginable2">
 			        {% for oportunityResearch in oportunityResearches %}
 			            <tr>
 			                <td style="width: 90px;">
@@ -116,4 +116,15 @@
       </div>
     </div>
     
+    <script type="text/javascript">
+
+window.addEventListener("load", function(evt) {
+      document.getElementById("search-form").style.width = "115px";
+
+      $('<div class="col-md-12 text-center"><ul class="pagination " id="pagerSelector2"></ul</div>').insertAfter($('#paginable2').parent());
+      $('#paginable2').pageMe({pagerSelector:'#pagerSelector2',showPrevNext:true,hidePageNumbers:false,perPage:10});
+    })
+
+  </script>
+
 {% endblock %}
