--- a/sigi/app/Resources/views/user/index.html.twig
+++ b/sigi/app/Resources/views/user/index.html.twig
@@ -20,7 +20,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="paginable">
         {% for user in users %}
             <tr>
                 <td><a href="{{ path('user_show', { 'id': user.id }) }}">{{ user.id }}</a></td>
