--- a/sigi/app/Resources/views/base.html.twig
+++ b/sigi/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Gestión IPre{% endblock %}</title>
+        <title>{% block title %}Gestión IPre (beta){% endblock %}</title>
         {% block stylesheets %}
             <link href="{{ asset('bundles/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet"/>
             <link href="{{ asset('css/main.css') }}" rel="stylesheet"/>
@@ -27,6 +27,7 @@
                     <span class="icon-bar"></span>
                   </button>
                   <a class="navbar-brand" href="#">Gestión IPre</a>
+                  <div style="padding: 0; display: inline-block; color: #4B647D; margin-top: 6px;">Beta</div>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
